Footer y Formulario de contacto con nuevo color

--- a/html/index.html
+++ b/html/index.html
@@ -164,7 +164,7 @@
     <footer>
 
         <section id="footer-logo-container">
-            <a href="#"><img src="../img/BAN - Logo.png" id="footer-logo" alt="Logo de BAN - Jardineria y Manenimiento Industrial"></a>
+            <a href="#"><img src="../img/BAN - LogoContorno.png" id="footer-logo" alt="Logo de BAN - Jardineria y Manenimiento Industrial"></a>
         </section>
 
         <section id="footer-indexOptions">
