Cambio de diseño de servicios

--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
         <br><br><br>
         <section id="services-container">
             <div id="services-header">
-                <h1 class="titles">Nuestros Servicios.</h1>
+                <h1 class="titles">Nuestros Servicios</h1>
                 <h3 class="descriptions"> En <a href="#" class="txt-destacado">BAN Jardinería y Mantenimiento Industrial S de
                 RL de CV</a>, estamos comprometidos con nuestros
                 clientes, dando un servicio personalizado,
@@ -64,7 +64,7 @@
 
 
                     <div class="svcs-description">
-                       <a href=""><h2>JARDINERÍA, PODAS Y DASONOMÍA 
+                       <a href="Jardineria.html"><h2>JARDINERÍA, PODAS Y DASONOMÍA 
                         URBANA, SISTEMAS DE RIEGO Y 
                         PAISAJISMO</h2></a>
                         <p class="svcs-text">Amplia experiencia en jardinería industrial y residencial. 
