--- a/html/Jardineria.html
+++ b/html/Jardineria.html
@@ -41,12 +41,51 @@
 
     <main>
         <section class="main-Servicio">
-            <div id="servicio-titulo"><h1>Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</h1></div>
+            <!-- <div id="servicio-titulo"><h1>Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</h1></div>
 
             <div id="servicio-info">
                 <p>Amplia experiencia en jardinería industrial y residencial, especialización en podas urbanas, diseño e instalación de riego residencial. Profesionales agrónomos expertos en nutrición vegetal, control de plagas, sistemas de riego automatizado y compostaje de residuos vegetales.</p>
 
                 <img src="../img/jardineria.jpg" alt="">
+            </div> -->
+
+            <div id="servicio-imagenes">
+                <div id="servicio-img-1">
+                    <img src="../img/fondo.jpg" alt="">
+                </div>
+
+                <div id="servicio-img-2">
+                    <img src="../img/fondo2.jpg" alt="">
+                </div>
+
+                <div id="servicio-img-3">
+                    <img src="../img/fondo3.jpg" alt="">
+                </div>
+            </div>
+
+            <div id="servicio-info">
+                <div id="servicio-titulo">
+                    <h1>Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</h1>
+                </div>
+                <div id="servicio-detalles">
+                    <!-- <p>Amplia experiencia en jardinería industrial y residencial, especialización en podas 
+                        urbanas, diseño e instalación de riego residencial. Profesionales agrónomos 
+                        expertos en nutrición vegetal, control de plagas, sistemas de riego automatizado y 
+                        compostaje de residuos vegetales.</p> -->
+
+                    <p>
+                        Amplia experiencia en jardinería industrial y
+ residencial, con personal técnico capacitado en
+ manejo de áreas verdes, podas urbanas con
+ capacitación para trabajos en alturas, diseño e
+ instalación de riego residencial, respaldados por
+ profesionales agrónomos especialistas en nutrición
+ vegetal, control de plagas, enfermedades, sistemas
+ de riego automatizado, manejo y compostaje de
+ residuos vegetales
+                    </p>
+                </div>
+                
             </div>
         </section>
         
