--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
         <br><br><br>
         <section id="services-container">
             <div id="services-header">
-                <h1 class="titles">Calam Servicios</h1>
+                <h1 class="titles">Nuestros Servicios</h1>
                 <h3 class="descriptions"> En <a href="#" class="txt-destacado">BAN Jardinería y Mantenimiento Industrial S de
                 RL de CV</a>, estamos comprometidos con nuestros
                 clientes, dando un servicio personalizado,
