Avance de aboutUs

--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
         <br><br><br>
         <section id="services-container">
             <div id="services-header">
-                <h1 class="titles">Calam Servicios</h1>
+                <h1 class="titles">Nuestros Servicios</h1>
                 <h3 class="descriptions"> En <a href="#" class="txt-destacado">BAN Jardinería y Mantenimiento Industrial S de
                 RL de CV</a>, estamos comprometidos con nuestros
                 clientes, dando un servicio personalizado,
@@ -108,10 +108,27 @@
                 </div>
 
             </div>
-
-            
         </section>
-        
+
+        <br><br><br>
+        <section id="aboutUs-container">
+            <h1 class="titles">Acerca de Nosotros</h1>
+            <div id="about_uno">
+                <div id="descriptionAbout-container">
+                    <div id="phrase-container">
+                        <h1 id="frase">Beyond your expectations. <span>La satisfacción de nuestros clientes es nuestra prioridad.</span></h1>
+                    </div>
+                    <div id="textUs-container">
+                        <p>BAN Jardinería y Mantenimiento Industrial S de RL de CV, integrada por trabajadores y profesionales, 
+                            surge tras años de experiencia laboral para brindar servicios profesionales en diversos campos.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="imgAbout-container"></div>
+            <div id="about_dos">
+            </div>
+        </section>
+        <br><br><br>
     </main>
 
     <section id="form-ContactUs">
