Pagina de contactanos

--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -91,12 +91,18 @@
                             <option value="recomendacion">Limpieza industrial</option>
                             <option value="otro">Otro</option>
                         </select>
-                        <!-- <p id="descripcion">Encuentranos en:</p> -->
-                        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.1835554521776!2d-100.1320132!3d20.498700299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d36c2e1dae24c1%3A0x46ff40a2f4487bbc!2sBaja%20California%20Nte.%203325%2C%20El%20Chamizal%2C%2076700%20Pedro%20Escobedo%2C%20Qro.!5e0!3m2!1ses!2smx!4v1703305125586!5m2!1ses!2smx" width="100%" height="85%" style="border:0; box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); border-radius: 1em;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
-    
+
                     </section>
                     <div id="cont_btn"><button id="btn_enviar">Enviar</button></div>
                 </form>
+
+                <div id="ubicacion">                
+                    <p id="descripcion">Encuentranos en:</p>
+                    <div id="ubicacion-info">
+                        <p>Baja California Nte. 3325, El Chamizal, 76700 Pedro Escobedo, Qro.</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.1835554521776!2d-100.1320132!3d20.498700299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d36c2e1dae24c1%3A0x46ff40a2f4487bbc!2sBaja%20California%20Nte.%203325%2C%20El%20Chamizal%2C%2076700%20Pedro%20Escobedo%2C%20Qro.!5e0!3m2!1ses!2smx!4v1703305125586!5m2!1ses!2smx" width="40%" height="70%" style="border:0; box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); border-radius: 1em;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
         </section>
     </main>
 
