Boton de 'me interesa' en la seccion de servicio

--- a/html/Jardineria.html
+++ b/html/Jardineria.html
@@ -33,7 +33,7 @@
                 </ul>
             </li>
             <li><a href="" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
-            <li><a href="" class="navOpts-underline-hover">Contacto</a></li>
+            <li><a href="Contacto.html" class="navOpts-underline-hover">Contacto</a></li>
             <li><a href="" class="navOpts-underline-hover">Nuestros Clientes</a></li>
 
         </ul>
@@ -75,16 +75,18 @@
 
                     <p>
                         Amplia experiencia en jardinería industrial y
- residencial, con personal técnico capacitado en
- manejo de áreas verdes, podas urbanas con
- capacitación para trabajos en alturas, diseño e
- instalación de riego residencial, respaldados por
- profesionales agrónomos especialistas en nutrición
- vegetal, control de plagas, enfermedades, sistemas
- de riego automatizado, manejo y compostaje de
- residuos vegetales
+                        residencial, con personal técnico capacitado en
+                        manejo de áreas verdes, podas urbanas con
+                        capacitación para trabajos en alturas, diseño e
+                        instalación de riego residencial, respaldados por
+                        profesionales agrónomos especialistas en nutrición
+                        vegetal, control de plagas, enfermedades, sistemas
+                        de riego automatizado, manejo y compostaje de
+                        residuos vegetales
                     </p>
                 </div>
+
+                <div id="servicio-btn"><a href="Contacto.html"><button>Me Interesa</button></a></div>
                 
             </div>
         </section>
@@ -102,9 +104,9 @@
         <section id="footer-indexOptions">
             <ul>
                 <li class="footer-Titles">Navegacion</li>
-                <li><a href="">Servicios</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="">Acerca de Nosotros</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="Contacto.html">Contacto</a></li>
                 <li><a href="">Nuestros Clientes</a></li>
             </ul>
         </section>
