--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -24,7 +24,7 @@
                 <a href="#" class="navOpts-underline-hover">Servicios</a>
                 <ul class="vertical-menu">
                     <li>
-                        <li><a href="#">Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</a></li>
+                        <li><a href="Jardineria.html">Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</a></li>
                         <li><a href="#">Construcción y extracción de residuos industriales sólidos</a></li>
                         <li><a href="#">Suministro, instalación y mantenimiento de riego residencial</a></li>
                         <li><a href="#">Limpieza industrial</a></li>
@@ -33,7 +33,7 @@
                 </ul>
             </li>
             <li><a href="" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
-            <li><a href="" class="navOpts-underline-hover">Contacto</a></li>
+            <li><a href="#" class="navOpts-underline-hover">Contacto</a></li>
             <li><a href="" class="navOpts-underline-hover">Nuestros Clientes</a></li>
 
         </ul>
@@ -117,9 +117,9 @@
         <section id="footer-indexOptions">
             <ul>
                 <li class="footer-Titles">Navegacion</li>
-                <li><a href="">Servicios</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="">Acerca de Nosotros</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="#">Contacto</a></li>
                 <li><a href="">Nuestros Clientes</a></li>
             </ul>
         </section>
