Se agregaro todos los servicios

--- a/html/RiegoResidencial.html
+++ b/html/RiegoResidencial.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="../img/Logo.png"> 
-    <title>BAN | Jardineria</title>
+    <title>BAN | Riego Residencial</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,9 +24,9 @@
                 <a href="#" class="navOpts-underline-hover">Servicios</a>
                 <ul class="vertical-menu">
                     <li>
-                        <li><a href="#">Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</a></li>
+                        <li><a href="Jardineria.html">Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</a></li>
                         <li><a href="Construccion.html">Construcción y extracción de residuos industriales sólidos</a></li>
-                        <li><a href="RiegoResidencial.html">Suministro, instalación y mantenimiento de riego residencial</a></li>
+                        <li><a href="#">Suministro, instalación y mantenimiento de riego residencial</a></li>
                         <li><a href="LimpiezaIndustrial.html">Limpieza industrial</a></li>
 
                     </li>
@@ -65,24 +65,15 @@
 
             <div id="servicio-info">
                 <div id="servicio-titulo">
-                    <h1>Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</h1>
+                    <h1>Suministro, instalación y mantenimiento de riego residencial</h1>
                 </div>
                 <div id="servicio-detalles">
-                    <!-- <p>Amplia experiencia en jardinería industrial y residencial, especialización en podas 
-                        urbanas, diseño e instalación de riego residencial. Profesionales agrónomos 
-                        expertos en nutrición vegetal, control de plagas, sistemas de riego automatizado y 
-                        compostaje de residuos vegetales.</p> -->
-
                     <p>
-                        Amplia experiencia en jardinería industrial y
-                        residencial, con personal técnico capacitado en
-                        manejo de áreas verdes, podas urbanas con
-                        capacitación para trabajos en alturas, diseño e
-                        instalación de riego residencial, respaldados por
-                        profesionales agrónomos especialistas en nutrición
-                        vegetal, control de plagas, enfermedades, sistemas
-                        de riego automatizado, manejo y compostaje de
-                        residuos vegetales.
+                        En nuestra plantilla tenemos ingenieros especialistas en riego residencial, industrial 
+                        y agrícola. Realizamos desde el levantamiento, planeación e instalación de sistemas de 
+                        riego especializados, automatizados, con aguas blancas y grises (tratadas) e incluso 
+                        trabajamos con sistemas de bombeo con alto contenido de sólidos, con sistemas de filtración
+                        muy eficientes. Respetamos el medio ambiente y promovemos el uso correcto del agua.
                     </p>
                 </div>
 
