--- a/html/index.html
+++ b/html/index.html
@@ -26,9 +26,9 @@
                 <ul class="vertical-menu">
                     <li>
                         <li><a href="Jardineria.html">Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</a></li>
-                        <li><a href="#">Construcción y extracción de residuos industriales sólidos</a></li>
-                        <li><a href="#">Suministro, instalación y mantenimiento de riego residencial</a></li>
-                        <li><a href="#">Limpieza industrial</a></li>
+                        <li><a href="Construccion.html">Construcción y extracción de residuos industriales sólidos</a></li>
+                        <li><a href="RiegoResidencial.html">Suministro, instalación y mantenimiento de riego residencial</a></li>
+                        <li><a href="LimpiezaIndustrial.html">Limpieza industrial</a></li>
 
                     </li>
                 </ul>
