--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="../img/Logo.png"> 
-    <title>BAN | Jardineria</title>
+    <title>BAN | Contacto</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,9 +25,9 @@
                 <ul class="vertical-menu">
                     <li>
                         <li><a href="Jardineria.html">Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</a></li>
-                        <li><a href="#">Construcción y extracción de residuos industriales sólidos</a></li>
-                        <li><a href="#">Suministro, instalación y mantenimiento de riego residencial</a></li>
-                        <li><a href="#">Limpieza industrial</a></li>
+                        <li><a href="Construccion.html">Construcción y extracción de residuos industriales sólidos</a></li>
+                        <li><a href="RiegoResidencial.html">Suministro, instalación y mantenimiento de riego residencial</a></li>
+                        <li><a href="LimpiezaIndustrial.html">Limpieza industrial</a></li>
 
                     </li>
                 </ul>
