--- a/html/index.html
+++ b/html/index.html
@@ -116,7 +116,7 @@
             <div id="about_uno">
                 <div id="descriptionAbout-container">
                     <div id="phrase-container">
-                        <h1 id="frase">Beyond your expectations. <span>La satisfacción de nuestros clientes es nuestra prioridad.</span></h1>
+                        <h1 id="frase"><u>Beyond your expectations.</u> <span>La satisfacción de nuestros clientes es nuestra prioridad.</span></h1>
                     </div>
                     <div id="textUs-container">
                         <p>Somos una empresa joven, innovadora,comprometida con sus clientes, con procesos de 
@@ -128,7 +128,7 @@
             </div>
             <div id="imgAbout-container"></div>
             <div id="about_dos">
-                <div id="prueba-container">
+                <!-- <div id="prueba-container">
                 </div>
                 <div id="extrasAbout-container">
                     <div class="extras-container">
@@ -142,7 +142,7 @@
                     <div class="extras-container">
                         <div class="titleExtra-container"> <h3>EMPLOYERBRANDING</h3></div>
                         <div class="textExtra-container"><p class="textExtra">Otorgamos las mejores condiciones laborales a nuestros empleados para evitar larotación de personal</p></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
