--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
+            <li><a href="AcercaDeNosotros.html" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
             <li><a href="Contacto.html" class="navOpts-underline-hover">Contacto</a></li>
             <li><a href="" class="navOpts-underline-hover">Nuestros Clientes</a></li>
 
