--- a/html/AcercaDeNosotros.html
+++ b/html/AcercaDeNosotros.html
@@ -41,8 +41,8 @@
 
     <main>
         <section id="main-AboutUs">
-            <div id="titulo"> <h1>Acerca de Nosotros</h1></div>
-            <div id="description"> <p>Somos una empresa joven, innovadora, comprometida con sus clientes, con procesos de mejora continua en todas las áreas de nuestro servicio. 
+            <div id="titulo"> <h1 id="tituloAboutUs">Acerca de Nosotros</h1></div>
+            <div id="description"> <p id="texto_AboutUs">Somos una empresa joven, innovadora, comprometida con sus clientes, con procesos de mejora continua en todas las áreas de nuestro servicio. 
                 Buscamos el mejor beneficio-costo para nuestros clientes y mantenemos comunicación constante entre cliente-empresa para obtener los mejores resultados.
                 BAN Jardinería y Mantenimiento Industrial S de RL de CV, está conformada por trabajadores y profesionistas de los diversos ramos en que ofrece sus servicios. 
                 Después de muchos años de trabajar como empleados, surge la inquietud de formar una empresa que tiene la base principal para ofrecer un servicio profesional: la experiencia.</p></div>
@@ -50,16 +50,16 @@
             <div id="opciones">
                 <div id="extrasAbout-container">
                     <div class="extras-container">
-                        <div class="titleExtra-container"> <h3>EMPLOYERBRANDING</h3></div>
-                        <div class="textExtra-container"><p class="textExtra">Otorgamos las mejores condiciones laborales a nuestros empleados para evitar larotación de personal</p></div>
+                        <div class="titleExtra-container"> <h3 id="tituloExtra">EMPLOYERBRANDING</h3></div>
+                        <div class="textExtra-container"><p class="texto-Extra">Otorgamos las mejores condiciones laborales a nuestros empleados para evitar larotación de personal</p></div>
                     </div>
                     <div class="extras-container">
-                        <div class="titleExtra-container"> <h3>PLAN DE CAPACITACIÓN DE PERSONAL</h3></div>
-                        <div class="textExtra-container"><p class="textExtra">El personal se capacita constantemente, durante todo el año, en seguridad e higiene, manejo de herramienta, nutrición y atención al cliente.</p></div>
+                        <div class="titleExtra-container"> <h3 id="tituloExtra">PLAN DE CAPACITACIÓN DE PERSONAL</h3></div>
+                        <div class="textExtra-container"><p class="texto-Extra">El personal se capacita constantemente, durante todo el año, en seguridad e higiene, manejo de herramienta, nutrición y atención al cliente.</p></div>
                     </div>
                     <div class="extras-container">
-                        <div class="titleExtra-container"> <h3>EXPERTOS EN TRABAJO BAJO PRESIÓN</h3></div>
-                        <div class="textExtra-container"><p class="textExtra">Al nivel de estándares de calidad de EE. UU., la gran mayoría de nuestros empleados han laborado en aquel país, en su ramo.</p></div>
+                        <div class="titleExtra-container"> <h3 id="tituloExtra">EXPERTOS EN TRABAJO BAJO PRESIÓN</h3></div>
+                        <div class="textExtra-container"><p class="texto-Extra">Al nivel de estándares de calidad de EE. UU., la gran mayoría de nuestros empleados han laborado en aquel país, en su ramo.</p></div>
                     </div>
             </div>
 
