Imagenes de jardineria

--- a/html/Jardineria.html
+++ b/html/Jardineria.html
@@ -51,15 +51,15 @@
 
             <div id="servicio-imagenes">
                 <div id="servicio-img-1">
-                    <img src="../img/fondo.jpg" alt="">
+                    <img src="../img/Jardineria/Jardineria2.jpeg" alt="">
                 </div>
 
                 <div id="servicio-img-2">
-                    <img src="../img/fondo2.jpg" alt="">
+                    <img src="../img/Jardineria/Jardineria.jpeg" alt="">
                 </div>
 
                 <div id="servicio-img-3">
-                    <img src="../img/fondo3.jpg" alt="">
+                    <img src="../img/Jardineria/Jardineria3.jpeg" alt="">
                 </div>
             </div>
 
