--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
 
             <div id="services-main">
                 <div class="services-sections" id="svcs-section-1">
-                    <img src="../img/jardineria.jpg" alt="Servicio 1" class="svcs-img">
+                    <img src="../img/Jardineria/Jardineria4.jpeg" alt="Servicio 1" class="svcs-img">
 
 
                     <div class="svcs-description">
