Imagenes en los servicios 1 y 2, imagenes agregadas al index

--- a/html/Construccion.html
+++ b/html/Construccion.html
@@ -50,16 +50,16 @@
             </div> -->
 
             <div id="servicio-imagenes">
-                <div id="servicio-img-1">
-                    <img src="../img/fondo.jpg" alt="">
+                <div class="servicio-img-1" id="img-construction-1">
+                    <img src="../img/Construccion/Construccion8.jpeg" alt="">
                 </div>
 
-                <div id="servicio-img-2">
-                    <img src="../img/fondo2.jpg" alt="">
+                <div class="servicio-img-2" id="img-construction-2">
+                    <img src="../img/Construccion/Construccion4.jpeg" alt="">
                 </div>
 
-                <div id="servicio-img-3">
-                    <img src="../img/fondo3.jpg" alt="">
+                <div class="servicio-img-3" id="img-construction-3">
+                    <img src="../img/Construccion/Construccion2.jpeg" alt="">
                 </div>
             </div>
 
