--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
 
             <div id="services-main">
                 <div class="services-sections" id="svcs-section-1">
-                    <img src="../img/Jardineria/Jardineria4.jpeg" alt="Servicio 1" class="svcs-img">
+                    <img src="../img/Jardineria/Jardineria4.jpeg" alt="Jardineria, podas y dasonomía" class="svcs-img">
 
 
                     <div class="svcs-description">
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="services-sections">
-                    <img src="../img/fondo.jpg" alt="sadasd" class="svcs-img">
+                    <img src="../img/Construccion/Construccion7.jpeg" alt="Construccion y extraccionde residuos industriales" class="svcs-img">
  
                     <div class="svcs-description">
                        <a href=""><h2>CONSTRUCCIÓN Y EXTRACCIÓN DE 
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="services-sections">
-                    <img src="../img/fondo2.jpg" alt="sadasd" class="svcs-img">
+                    <img src="../img/Limpieza-Industrial/Limpieza1.jpeg" alt="Limpieza Industrial" class="svcs-img">
  
                     <div class="svcs-description">
                        <a href=""><h2>LIMPIEZA INDUSTRIAL</h2></a>
