--- a/html/Jardineria.html
+++ b/html/Jardineria.html
@@ -50,15 +50,15 @@
             </div> -->
 
             <div id="servicio-imagenes">
-                <div id="servicio-img-1">
+                <div class="servicio-img-1">
                     <img src="../img/Jardineria/Jardineria2.jpeg" alt="">
                 </div>
 
-                <div id="servicio-img-2">
+                <div class="servicio-img-2">
                     <img src="../img/Jardineria/Jardineria.jpeg" alt="">
                 </div>
 
-                <div id="servicio-img-3">
+                <div class="servicio-img-3">
                     <img src="../img/Jardineria/Jardineria3.jpeg" alt="">
                 </div>
             </div>
