--- a/html/LimpiezaIndustrial.html
+++ b/html/LimpiezaIndustrial.html
@@ -50,15 +50,15 @@
             </div> -->
 
             <div id="servicio-imagenes">
-                <div id="servicio-img-1">
+                <div class="servicio-img-1">
                     <img src="../img/fondo.jpg" alt="">
                 </div>
 
-                <div id="servicio-img-2">
-                    <img src="../img/fondo2.jpg" alt="">
+                <div class="servicio-img-2">
+                    <img src="../img/Limpieza-Industrial/Limpieza2.jpeg" alt="">
                 </div>
 
-                <div id="servicio-img-3">
+                <div class="servicio-img-3">
                     <img src="../img/fondo3.jpg" alt="">
                 </div>
             </div>
