Avances con foto AboutUs

--- a/html/AcercaDeNosotros.html
+++ b/html/AcercaDeNosotros.html
@@ -39,15 +39,17 @@
         </ul>
     </nav>
 
-    <main>
+    <main id="mainAboutUs">
         <section id="main-AboutUs">
-            <div id="titulo"> <h1 id="tituloAboutUs">Acerca de Nosotros</h1></div>
-            <div id="description"> <p id="texto_AboutUs">Somos una empresa joven, innovadora, comprometida con sus clientes, con procesos de mejora continua en todas las áreas de nuestro servicio. 
+            <div id="titleAboutUs-container"> <h1 id="tituloAboutUs">Acerca de Nosotros</h1></div>
+            <div id="descriptionAboutUs-container"> <p id="texto_AboutUs">Somos una empresa joven, innovadora, comprometida con sus clientes, con procesos de mejora continua en todas las áreas de nuestro servicio. 
                 Buscamos el mejor beneficio-costo para nuestros clientes y mantenemos comunicación constante entre cliente-empresa para obtener los mejores resultados.
                 BAN Jardinería y Mantenimiento Industrial S de RL de CV, está conformada por trabajadores y profesionistas de los diversos ramos en que ofrece sus servicios. 
                 Después de muchos años de trabajar como empleados, surge la inquietud de formar una empresa que tiene la base principal para ofrecer un servicio profesional: la experiencia.</p></div>
-            <div id="img"> <p>1</p></div>
-            <div id="opciones">
+            <div id="imgAboutUs-container">
+                <img src="../img/prueba2.0.png" alt="">
+            </div>
+            <div id="extrasAbout">
                 <div id="extrasAbout-container">
                     <div class="extras-container">
                         <div class="titleExtra-container"> <h3 id="tituloExtra">EMPLOYERBRANDING</h3></div>
