--- a/html/LimpiezaIndustrial.html
+++ b/html/LimpiezaIndustrial.html
@@ -51,7 +51,7 @@
 
             <div id="servicio-imagenes">
                 <div class="servicio-img-1">
-                    <img src="../img/fondo.jpg" alt="">
+                    <img src="../img/Limpieza-Industrial/Limpeiza3.jpeg" alt="">
                 </div>
 
                 <div class="servicio-img-2">
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="servicio-img-3">
-                    <img src="../img/fondo3.jpg" alt="">
+                    <img src="../img/Limpieza-Industrial/Limpieza4.jpeg" alt="">
                 </div>
             </div>
 
