Cambio de imagen AboutUs

--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
+            <li><a href="AcercaDeNosotros.html" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
             <li><a href="Contacto.html" class="navOpts-underline-hover">Contacto</a></li>
             <li><a href="" class="navOpts-underline-hover">Nuestros Clientes</a></li>
 
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="services-sections">
-                    <img src="../img/Limpieza-Industrial/Limpieza5.jpeg" alt="Limpieza Industrial" class="svcs-img">
+                    <img src="../img/Limpieza-Industrial/Limpieza1.jpeg" alt="Limpieza Industrial" class="svcs-img">
  
                     <div class="svcs-description">
                        <a href=""><h2>LIMPIEZA INDUSTRIAL</h2></a>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-            <div id="imgAbout-container"></div>
+            <div id="imgAbout-container"> <img src="../img/AcercaDeNosotros3.jpeg" alt="" id="imgPrueba"></div>
             <div id="about_dos">
                 <!-- <div id="prueba-container">
                 </div>
