--- a/html/RiegoResidencial.html
+++ b/html/RiegoResidencial.html
@@ -32,7 +32,7 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
+            <li><a href="AcercaDeNosotros.html" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
             <li><a href="Contacto.html" class="navOpts-underline-hover">Contacto</a></li>
             <li><a href="" class="navOpts-underline-hover">Nuestros Clientes</a></li>
 
@@ -96,7 +96,7 @@
             <ul>
                 <li class="footer-Titles">Navegacion</li>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="">Acerca de Nosotros</a></li>
+                <li><a href="AcercaDeNosotros.html">Acerca de Nosotros</a></li>
                 <li><a href="Contacto.html">Contacto</a></li>
                 <li><a href="">Nuestros Clientes</a></li>
             </ul>
