--- a/html/index.html
+++ b/html/index.html
@@ -159,7 +159,7 @@
             <ul>
                 <li class="footer-Titles">Navegacion</li>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="">Acerca de Nosotros</a></li>
+                <li><a href="AcercaDeNosotros.html">Acerca de Nosotros</a></li>
                 <li><a href="Contacto.html">Contacto</a></li>
                 <li><a href="">Nuestros Clientes</a></li>
             </ul>
