--- a/html/index.html
+++ b/html/index.html
@@ -59,13 +59,14 @@
         <section id="main-presentation">
              <div id="main-BAN">
                 <img src="../img/BAN - LogoContorno.png" alt="Logo de BAN - Jardineria y Mantenimiento Industrial" id="main-logo">
+                
             </div>
         </section>
         <br><br><br>
         <section id="services-container">
             <div id="services-header">
                 <h1 class="titles">Nuestros Servicios</h1>
-                <h3 class="descriptions"> En <a href="#" class="txt-destacado">BAN Jardinería y Mantenimiento Industrial S de
+                <h3 class="descriptions"> En <a href="AcercaDeNosotros.html" class="txt-destacado">BAN Jardinería y Mantenimiento Industrial S de
                 RL de CV</a>, estamos comprometidos con nuestros
                 clientes, dando un servicio personalizado,
                 consensuado, que cubra completamente las
