--- a/html/AcercaDeNosotros.html
+++ b/html/AcercaDeNosotros.html
@@ -60,9 +60,9 @@
                 </div>
                 <div id="extrasAbout">
                     <div id="extrasAbout-container">
-                        <div class="extras-container">
+                        <div class="extras-container" style="border: none;">
                             <div class="titleExtra-container"> <h3 id="tituloExtra">EMPLOYERBRANDING</h3></div>
-                            <div class="textExtra-container"><p class="texto-Extra">Otorgamos las mejores condiciones laborales a nuestros empleados para evitar larotación de personal</p></div>
+                            <div class="textExtra-container"><p class="texto-Extra">Otorgamos las mejores condiciones laborales a nuestros empleados para evitar la rotación de personal</p></div>
                         </div>
                         <div class="extras-container">
                             <div class="titleExtra-container"> <h3 id="tituloExtra">PLAN DE CAPACITACIÓN DE PERSONAL</h3></div>
