--- a/html/ComentariosUsuarios.html
+++ b/html/ComentariosUsuarios.html
@@ -24,17 +24,17 @@
                 <a href="#" class="navOpts-underline-hover">Servicios</a>
                 <ul class="vertical-menu">
                     <li>
-                        <li><a href="#">Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</a></li>
-                        <li><a href="#">Construcción y extracción de residuos industriales sólidos</a></li>
-                        <li><a href="#">Suministro, instalación y mantenimiento de riego residencial</a></li>
-                        <li><a href="#">Limpieza industrial</a></li>
+                        <li><a href="Jardineria.html">Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</a></li>
+                        <li><a href="Construccion.html">Construcción y extracción de residuos industriales sólidos</a></li>
+                        <li><a href="RiegoResidencial.html">Suministro, instalación y mantenimiento de riego residencial</a></li>
+                        <li><a href="LimpiezaIndustrial.html">Limpieza industrial</a></li>
 
                     </li>
                 </ul>
             </li>
-            <li><a href="" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
-            <li><a href="" class="navOpts-underline-hover">Contacto</a></li>
-            <li><a href="" class="navOpts-underline-hover">Nuestros Clientes</a></li>
+            <li><a href="AcercaDeNosotros.html" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
+            <li><a href="Contacto.html" class="navOpts-underline-hover">Contacto</a></li>
+            <li><a href="ComentariosUsuarios.html" class="navOpts-underline-hover">Nuestros Clientes</a></li>
 
         </ul>
     </nav>
@@ -119,10 +119,10 @@
         <section id="footer-indexOptions">
             <ul>
                 <li class="footer-Titles">Navegacion</li>
-                <li><a href="">Servicios</a></li>
-                <li><a href="">Acerca de Nosotros</a></li>
-                <li><a href="">Contacto</a></li>
-                <li><a href="">Nuestros Clientes</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="AcercaDeNosotros.html">Acerca de Nosotros</a></li>
+                <li><a href="Contacto.html">Contacto</a></li>
+                <li><a href="#">Nuestros Clientes</a></li>
             </ul>
         </section>
 
