--- a/html/index.html
+++ b/html/index.html
@@ -92,7 +92,7 @@
                     <img src="../img/Construccion/Construccion7.jpeg" alt="Construccion y extraccionde residuos industriales" class="svcs-img">
  
                     <div class="svcs-description">
-                       <a href=""><h2>CONSTRUCCIÓN Y EXTRACCIÓN DE 
+                       <a href="Construccion.html"><h2>CONSTRUCCIÓN Y EXTRACCIÓN DE 
                         RESIDUOS INDUSTRIALES SÓLIDOS</h2></a>
                         <p class="svcs-text">Personal capacitado en construcción y especialidades. 
                             Respaldados por Ingenieros e Arquitectos. Retirada de residuos sólidos 
@@ -104,7 +104,7 @@
                     <img src="../img/fondo3.jpg" alt="sadasd" class="svcs-img">
  
                     <div class="svcs-description">
-                       <a href=""><h2>SUMINISTRO, INSTALACIÓN Y MANTENIMIENTO DE RIEGO RESIDENCIAL</h2></a>
+                       <a href="RiegoResidencial.html"><h2>SUMINISTRO, INSTALACIÓN Y MANTENIMIENTO DE RIEGO RESIDENCIAL</h2></a>
                         <p class="svcs-text">Expertos en riego (residencial, industrial, agrícola). 
                             Instalación eficiente, bombeo y filtración. Compromiso ambiental y uso 
                             responsable del agua.</p>
@@ -115,7 +115,7 @@
                     <img src="../img/Limpieza-Industrial/Limpieza1.jpeg" alt="Limpieza Industrial" class="svcs-img">
  
                     <div class="svcs-description">
-                       <a href=""><h2>LIMPIEZA INDUSTRIAL</h2></a>
+                       <a href="LimpiezaIndustrial.html"><h2>LIMPIEZA INDUSTRIAL</h2></a>
                         <p class="svcs-text">
                             Personal con amplia experiencia en la industria. Estándares: 
                             seguridad, medio ambiente, capacitación, costos e innovación. 
@@ -177,7 +177,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="AcercaDeNosotros.html">Acerca de Nosotros</a></li>
                 <li><a href="Contacto.html">Contacto</a></li>
-                <li><a href="">Nuestros Clientes</a></li>
+                <li><a href="ComentariosUsuarios.html">Nuestros Clientes</a></li>
             </ul>
         </section>
 
