--- a/html/RiegoResidencial.html
+++ b/html/RiegoResidencial.html
@@ -34,7 +34,7 @@
             </li>
             <li><a href="AcercaDeNosotros.html" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
             <li><a href="Contacto.html" class="navOpts-underline-hover">Contacto</a></li>
-            <li><a href="" class="navOpts-underline-hover">Nuestros Clientes</a></li>
+            <li><a href="ComentariosUsuarios.html" class="navOpts-underline-hover">Nuestros Clientes</a></li>
 
         </ul>
     </nav>
@@ -98,7 +98,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="AcercaDeNosotros.html">Acerca de Nosotros</a></li>
                 <li><a href="Contacto.html">Contacto</a></li>
-                <li><a href="">Nuestros Clientes</a></li>
+                <li><a href="ComentariosUsuarios.html">Nuestros Clientes</a></li>
             </ul>
         </section>
 
