Responsive de celular completo

--- a/html/ComentariosUsuarios.html
+++ b/html/ComentariosUsuarios.html
@@ -42,7 +42,7 @@
             </li>
             <li><a href="AcercaDeNosotros.html" class="navOpts-underline-hover">Acerca de Nosotros</a></li>
             <li><a href="Contacto.html" class="navOpts-underline-hover">Contacto</a></li>
-            <li><a href="ComentariosUsuarios.html" class="navOpts-underline-hover">Nuestros Clientes</a></li>
+            <li><a href="#" class="navOpts-underline-hover">Nuestros Clientes</a></li>
 
         </ul>
     </nav>
