--- a/html/ComentariosUsuarios.html
+++ b/html/ComentariosUsuarios.html
@@ -54,60 +54,30 @@
                 <div class="comentario-container">
                     <div class="comillas-container"><img src="../img/comillas.png" alt="" class="img_comillas"></div>
                     <div class="resena-container">
-                        <p class="textoComentario">Esta es mi aerolínea preferida, por su servicio de primera 
-                            categoría y su relación calidad-precio.</p>
+                        <p class="textoComentario">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at neque quis felis porta ullamcorper</p>
                     </div>
                     <div class="cliente-container">
-                        <p class="textoCliente">Manuel Calam</p>
+                        <p class="textoCliente">Cliente 1</p>
                     </div>
                 </div>
-                <div class="comentario-container">
-                    <div class="comillas-container"><img src="../img/comillas.png" alt="" class="img_comillas"></div>                    <div class="resena-container">
-                        <p class="textoComentario">Soarée tiene ofertas inmejorables y vuela a muchos destinos.</p>
-                    </div>
-                    <div class="cliente-container">
-                        <p class="textoCliente">Noé Ibarra</p>
-                    </div>
-                </div>
+                
                 <div class="comentario-container">
                     <div class="comillas-container"><img src="../img/comillas.png" alt="" class="img_comillas"></div>
                     <div class="resena-container">
-                        <p class="textoComentario">Volar con Soarée se convierte en un verdadero lujo, gracias a Ia atención del personal que nos mima.</p>
-
+                        <p class="textoComentario">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at neque quis felis porta ullamcorper</p>
                     </div>
                     <div class="cliente-container">
-                        <p class="textoCliente">Yahir Ramírez</p>
+                        <p class="textoCliente">Cliente 1</p>
                     </div>
                 </div>
 
                 <div class="comentario-container">
                     <div class="comillas-container"><img src="../img/comillas.png" alt="" class="img_comillas"></div>
                     <div class="resena-container">
-                        <p class="textoComentario">Volar con Soarée se convierte en un verdadero lujo, gracias a Ia atención del personal que nos mima.</p>
-
+                        <p class="textoComentario">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at neque quis felis porta ullamcorper</p>
                     </div>
                     <div class="cliente-container">
-                        <p class="textoCliente">Yahir Ramírez</p>
-                    </div>
-                </div>
-
-                <div class="comentario-container">
-                    <div class="comillas-container"><img src="../img/comillas.png" alt="" class="img_comillas"></div>
-                    <div class="resena-container">
-                        <p class="textoComentario">Soarée tiene ofertas inmejorables y vuela a muchos destinos.</p>
-                    </div>
-                    <div class="cliente-container">
-                        <p class="textoCliente">Noé Ibarra</p>
-                    </div>
-                </div>
-
-                <div class="comentario-container">
-                    <div class="comillas-container"><img src="../img/comillas.png" alt="" class="img_comillas"></div>
-                    <div class="resena-container">
-                        <p class="textoComentario">Soarée tiene ofertas inmejorables y vuela a muchos destinos.</p>
-                    </div>
-                    <div class="cliente-container">
-                        <p class="textoCliente">Noé Ibarra</p>
+                        <p class="textoCliente">Cliente 1</p>
                     </div>
                 </div>
                 
