--- a/html/RiegoResidencial.html
+++ b/html/RiegoResidencial.html
@@ -49,25 +49,19 @@
 
     <main>
         <section class="main-Servicio">
-            <!-- <div id="servicio-titulo"><h1>Jardinería, podas y dasonomía urbana, sistemas de riego y paisajismo</h1></div>
-
-            <div id="servicio-info">
-                <p>Amplia experiencia en jardinería industrial y residencial, especialización en podas urbanas, diseño e instalación de riego residencial. Profesionales agrónomos expertos en nutrición vegetal, control de plagas, sistemas de riego automatizado y compostaje de residuos vegetales.</p>
-
-                <img src="../img/jardineria.jpg" alt="">
-            </div> -->
+           
 
             <div id="servicio-imagenes">
                 <div class="servicio-img-1">
-                    <img src="../img/fondo.jpg" alt="">
+                    <img src="../img/Riego/Riego2.jpeg" alt="">
                 </div>
 
                 <div class="servicio-img-2">
-                    <img src="../img/fondo2.jpg" alt="">
+                    <img src="../img/Riego/Riego3.jpeg" alt="">
                 </div>
 
                 <div class="servicio-img-3">
-                    <img src="../img/fondo3.jpg" alt="">
+                    <img src="../img/Riego/Riego1.jpeg" alt="">
                 </div>
             </div>
 
