--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="services-sections">
-                    <img src="../img/fondo3.jpg" alt="sadasd" class="svcs-img">
+                    <img src="../img/Riego/Riego3.jpeg" alt="sadasd" class="svcs-img">
  
                     <div class="svcs-description">
                        <a href="RiegoResidencial.html"><h2>SUMINISTRO, INSTALACIÓN Y MANTENIMIENTO DE RIEGO RESIDENCIAL</h2></a>
